--- a/WaterTableDataExtracter/DepthQuarterly/EDA_WaterTableDepthQuarterly.Rmd
+++ b/WaterTableDataExtracter/DepthQuarterly/EDA_WaterTableDepthQuarterly.Rmd
@@ -20,13 +20,14 @@ Loading data
 
 ```{r depthload}
 depth_db <- read.csv("water_table_depth_quarterly_2015_2016.csv")
+depth_db$Quarter <- ordered(depth_db$Quarter, levels=c("May 2015", "August 2015","November 2015","January 2016"))
+depth_db$Depth <- as.double(as.character(depth_db$Depth))
+
 summary(depth_db)
 ```
 
 
 ```{r}
-depth_db$Depth <- as.double(as.character(depth_db$Depth))
-depth_db$Quarter <- as.factor(depth_db$Quarter)
 
 # Replace 0 to NA for Depth
 depth_db$Depth[depth_db$Depth==0] <- NA
@@ -78,7 +79,7 @@ avg_depth_qtr
 ```
 
 For all qtrs
-```{r fig.width=10,fig.height=20}
+```{r fig.width=10,fig.height=50}
 ggplotly(ggplot(data = depth_db[,], aes(x=District, y=Depth, fill=District)) + geom_boxplot() + facet_grid(Quarter~., scales = "free_y") + ylab("Quarterly Average Depth"))
 ```
 
